move padding away from the body to avoid constant scrollbar

--- a/src/css/less/login.less
+++ b/src/css/less/login.less
@@ -10,7 +10,7 @@ html, body {
 
 body {
 	margin: 0;
-	padding: 20px 0;
+	padding: 0;
 	background: @blueDark;
 
 	.login-centerer {
@@ -23,6 +23,7 @@ body {
 			.login-container {
 				display: table;
 				margin: 0 auto;
+				padding: 20px 0;
 
 				form {
 					margin: 0;
